--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		
 	
 	<div class="statistics">
-		<h2>My Calorie Statistics</h2>
+		<h2>Calorie Statistics</h2>
 		<p>Based on my height, weight and age, my average calorie intake is supposed to be approximately <strong>1200 calories</strong>.</p>
 		<div class="grid grid-pad clearfix">
 			<div class="col-1-3">
